--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   firebase_core: ^3.5.0
   flutter_easyloading: ^3.0.5
   get: ^4.6.6
+  flutter_keyboard_visibility: ^6.0.0
+  lottie: ^3.1.2
+  firebase_auth: ^5.3.0
+  firebase_messaging: ^15.1.2
+  cloud_firestore: ^5.4.2
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
