--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   firebase_storage: ^12.3.4
   google_maps_flutter: ^2.10.0
   location: ^7.0.1
+  speech_to_text: ^7.0.0
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
