--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   location: ^7.0.1
   speech_to_text: ^7.0.0
   google_generative_ai: ^0.4.6
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
@@ -83,8 +84,8 @@ flutter:
     - assets/images/
     - assets/intro_images/
     - assets/images/home/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
