--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   speech_to_text: ^7.0.0
   google_generative_ai: ^0.4.6
   flutter_launcher_icons: ^0.14.2
+  http: ^1.1.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
