--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   http: ^1.1.0
   flutter_dotenv: ^5.0.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
