--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.2.6  # Ensure this version is up-to-date
+  url_launcher: ^6.3.1  # Ensure this version is up-to-date
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,6 +59,8 @@ dependencies:
   http: ^1.1.0
   flutter_dotenv: ^5.0.2
   geocoding: ^3.0.0
+  image_card: ^0.0.4
+  model_viewer_plus: ^1.9.1
 
 dev_dependencies:
   flutter_test:
